# compendiumkeeper

./: .env.example  README.md  pyproject.toml
compendia/: synthetic_technocracy_2024-12-01.compendium.pickle  synthetic_technocracy_2024-12-01.compendium.xml
src/compendiumkeeper/: cli.py  indexer.py  utils.py
src/compendiumkeeper/vector_db/: base.py  pinecone_db.py
tests/: conftest.py  test_indexer.py  test_utils.py  test_vector_db.py
